# appstack

./: .gitignore  Makefile
ant/: ant.spec  apache-ant-1.8.4-src.tar.bz2  apache-ant-bz163689.patch  apache-ant-class-path-in-manifest.patch  apache-ant-no-test-jar.patch
apache-maven/: apache-maven-jpp-script  apache-maven.spec  mvn-rpmbuild
cbase/server/cbase-1.8.1/portsigar/: configure.ac
cbase/server/cbase-1.8.1/workload-generator/: Makefile.am  cbworkloadgen
cbase/server/cbase-1.8.1/workload-generator/m4/: version.m4
flashcache/: flashcache-sysvinit.patch  flashcache.spec
go/: go.spec
javapackages-tools/: javapackages-0.10.0.tar.xz  javapackages-tools.spec
jpackage-utils/: abs2rel.sh  jpackage-utils-1.7.5.tar.bz2  jpackage-utils-README  jpackage-utils-build-classpath-symlink-fix.patch  jpackage-utils-own-mavendirs.patch  jpackage-utils-prefer-jre.patch  jpackage-utils-set-classpath.patch  jpackage-utils-update-maven-depmap.patch  jpackage-utils.spec
maven/: 0001-Add-plugin-api-deps.patch  0002-Use-custom-resolver.patch  0003-Use-utf-8-source-encoding.patch  0004-Fix-text-scope-skipping-with-maven.test.skip.patch  0006-Make-compiler-plugin-default-to-source-1.5.patch  1001-plexus-classworlds-loadpatch-fix.patch  JavadirWorkspaceReader.java  MavenJPackageDepmap.java  maven-bash-completion  maven-empty-dep.pom  maven-script  maven-script-local  maven-script-rpmbuild  maven.spec  repo-metadata.tar.xz
maven-plugin-tools/: maven-plugin-tools.spec
netty/: 0001-Remove-optional-deps.patch  0002-Replace-jboss-logger-with-jdk-logger.patch  0003-Fix-javadoc-plugin-configuration.patch  0004-Remove-antun-execution-for-removing-examples.patch  0005-Remove-eclipse-plugin.patch  netty.spec
pcs/: Makefile  bz1032161-Node-standby-should-use-pacemaker-list-not-corosync-.patch  bz1038478-Added-ability-to-set-and-remove-uidgid-for-RHEL6.patch  bz1038479-Fix-for-adding-verify-stonith-levels-on-RHEL6.patch  pcs-0.9.90-clones-utils.py.patch  pcs-transport-cman.patch  pcs-transport.patch  pcs.spec
protobuf/: protobuf.spec  (+3 more)
(+390 files in other folders)
